--- a/lib/embasado/styles.styl
+++ b/lib/embasado/styles.styl
@@ -35,7 +35,7 @@ body
 			display flex
 			justify-content space-around
 			align-items center
-			margin 0 2rem 0 2rem
+			margin 0 3rem 0 0
 			padding 0
 			height 50px
 		
