--- a/lib/styles.styl
+++ b/lib/styles.styl
@@ -30,7 +30,6 @@ li
 
 a
 	text-decoration none
-	font-size 1.3rem	
 	
 .Layout
 	background #393838
@@ -70,13 +69,14 @@ a
 			display flex
 			justify-content space-around
 			align-items center
-			margin 0
+			margin 0 2rem 0 0
 			padding 0
 			width 850px
 			height 50px
 		
 		&-nav_list a
 			color white	
+			font-size .8rem
 			
 		&-nav_items
 			font-size .8rem
