--- a/lib/styles.styl
+++ b/lib/styles.styl
@@ -141,10 +141,10 @@ a
 		border-bottom: solid 1px #00FFFF
 		display flex
 		justify-content center
-		flex-wrap wrap
+		/*flex-wrap wrap*/
 		background white
 		width 100%
-		height 680px
+		height 600px
 		
 		&-titulo
 			titulos()
