titulo servicios restaurado

--- a/lib/index.jade
+++ b/lib/index.jade
@@ -59,7 +59,9 @@ body
 		// SERVICIOS
 
 		div(class="Servicios" id="servicios")
-			include ../lib/circulos.jade
+			p(class="Servicios-titulo") NUESTROS SERVICIOS
+			div(class="Servicios-cir")
+				include ../lib/circulos.jade
 		//- div(class="Servicios" id="servicios")
 		//- 	p(class="Servicios-titulo") NUESTROS SERVICIOS
 		//- 	div(class="Contenedor-circulos")
