--- a/lib/styles.styl
+++ b/lib/styles.styl
@@ -141,14 +141,15 @@ a
 		border-bottom: solid 1px #00FFFF
 		display flex
 		justify-content center
-		/*flex-wrap wrap*/
+		flex-wrap wrap
 		background white
 		width 100%
-		height 600px
+		height 680px
 		
 		&-titulo
 			titulos()
 			width 100%
+			height 50px
 		
 		&-circulos
 			display flex
