--- a/lib/styles.styl
+++ b/lib/styles.styl
@@ -15,7 +15,7 @@ subtitulos()
 @import "nib"
 @import "slides.styl"
 @import"./embasado/styles.styl"
-
+@import"./circulos/styleCir.styl"
 	
 body
 	/*background #807C7C*/
