--- a/lib/embasado/styles.styl
+++ b/lib/embasado/styles.styl
@@ -121,9 +121,10 @@ body
 		&-list
 			background white
 			border solid 3px #00FFFF
-			font-size .9rem
+			font-size 1.3rem
 			height 340px
 			line-height 2rem
+			margin-left 1.5rem
 			
 		&-gallery
 			display flex
@@ -145,6 +146,15 @@ body
 		margin 1.5rem 0 0 0
 		text-align center
 		
+	.Maquinaria p
+		color #137CB9
+		font-size 1.3rem
+		margin-left 3rem
+	
+	.Maquinaria li
+		font-size 1rem
+		margin-left 3rem
+
 	.Footer
 		display flex
 		justify-content center
