--- a/public/css/demo.css
+++ b/public/css/demo.css
@@ -17,7 +17,7 @@
 
 /* General Demo Style */
 body {
-	background: #e4ebe9 url(../images/fancy_deboss.png) repeat top left;
+	/*background: #e4ebe9 url(../images/fancy_deboss.png) repeat top left;*/
 	color: #444;
 	font-family: "PT Sans Narrow", Arial, sans-serif;
 	font-size: 13px;
@@ -163,6 +163,6 @@ p.info {
 	clear: both;
 	text-align: center;
 	width: 100%;
-	max-wdith: 440px;
+	max-width: 440px;
 	margin: 0 auto;
 }
