gallería con png y ajustes visualez

--- a/lib/embasado.jade
+++ b/lib/embasado.jade
@@ -179,31 +179,31 @@ body
 				div(class="slider")
 					input#id1(checked='checked', name='slide_switch', type='radio')
 					label(for='id1')
-					img(src='./public/images/maquinaria/cortadoraIndustrial.jpg')
+					img(src='./public/images/maquinaria/descortezadora.png')
 					input#id2(name='slide_switch', type='radio')
 					label(for='id2')
-					img(src='./public/images/maquinaria/rebanadoracws576.jpg')
+					img(src='./public/images/maquinaria/rebanadoracws576.png')
 					input#id3(name='slide_switch', type='radio')
 					label(for='id3')
-					img(src='./public/images/maquinaria/cortadoraIndustrial.jpg')
+					img(src='./public/images/maquinaria/cortadoraIndustrial.png')
 					input#id4(name='slide_switch', type='radio')
 					label(for='id4')
-					img(src='./public/images/maquinaria/cortadoraxMenor.jpg')
+					img(src='./public/images/maquinaria/cortadoraxMenor.png')
 					input#id5(name='slide_switch', type='radio')
 					label(for='id5')
-					img(src='./public/images/maquinaria/molino.jpg')
+					img(src='./public/images/maquinaria/molino.png')
 					input#id6(name='slide_switch', type='radio')
 					label(for='id6')
-					img(src='./public/images/maquinaria/embutidoPiston.jpg')
+					img(src='./public/images/maquinaria/embutidoPiston.png')
 					input#id7(name='slide_switch', type='radio')
 					label(for='id7')
-					img(src='./public/images/maquinaria/mezcladora.jpg')
+					img(src='./public/images/maquinaria/mezcladora.png')
 					input#id8(name='slide_switch', type='radio')
 					label(for='id8')
-					img(src='./public/images/maquinaria/cutters.jpg')
+					img(src='./public/images/maquinaria/cutters.png')
 					input#id9(name='slide_switch', type='radio')
 					label(for='id9')
-					img(src='./public/images/maquinaria/css3-image-slider-with-stylized-thumbnails_data/marmitas.jpg')
+					img(src='./public/images/maquinaria/marmitas.png')
 
 			// FOOTER
 		div(class="Footer")
