--- a/lib/embasado/styles.styl
+++ b/lib/embasado/styles.styl
@@ -119,20 +119,20 @@ body
 		width 100%
 		
 		&-list
-			background white
-			border solid 3px #00FFFF
+			/*background white
+			border solid 3px #00FFFF*/
 			font-size 1.3rem
-			height 340px
+			/*height 340px*/
 			line-height 2rem
 			margin-left 1.5rem
 			
-		&-gallery
+		/*&-gallery
 			display flex
 			justify-content center
 			background-image url('../images/recuadroGal.png')	
 			background-size contain
 			background-repeat no-repeat
-			width 650px
+			width 650px*/
 			
 		&-gallery_items
 			width 222px
